syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 311
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarEnterElementViewNotify {
	uint32 avatar_entity_id = 6;
	bool is_triggerd = 8;
}
