syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum PropChangeReason {
	PROP_CHANGE_REASON_NONE = 0;
	PROP_CHANGE_REASON_STATUE_RECOVER = 1;
	PROP_CHANGE_REASON_ENERGY_BALL = 2;
	PROP_CHANGE_REASON_ABILITY = 3;
	PROP_CHANGE_REASON_LEVELUP = 4;
	PROP_CHANGE_REASON_ITEM = 5;
	PROP_CHANGE_REASON_AVATAR_CARD = 6;
	PROP_CHANGE_REASON_CITY_LEVELUP = 7;
	PROP_CHANGE_REASON_AVATAR_UPGRADE = 8;
	PROP_CHANGE_REASON_AVATAR_PROMOTE = 9;
	PROP_CHANGE_REASON_PLAYER_ADD_EXP = 10;
	PROP_CHANGE_REASON_FINISH_QUEST = 11;
	PROP_CHANGE_REASON_GM = 12;
	PROP_CHANGE_REASON_MANUAL_ADJUST_WORLD_LEVEL = 13;
}
